--- a/static/css/active_dashboard.css
+++ b/static/css/active_dashboard.css
@@ -1,25 +1,23 @@
-.navbar{
-    display: flex;
-    width: 100vw;
-    height: 6vh;
-    justify-content: space-between;
+.header{
+    display: none;
 }
 
-.right-navbar{
-    justify-content: end;
-}
+/*.navbar{*/
+/*    display: flex;*/
+/*    width: 100vw;*/
+/*    height: 6vh;*/
+/*    justify-content: start;*/
+/*}*/
 
-.nav-dashboard-name{
-    font-size: 20px;
-    font-weight: bold;
-}
+
 .action-bar{
     /*border: red solid 2px;*/
     display: flex;
     flex-direction: column;
-    height: 85vh;
+    height: 100vh;
     width: 10vw;
     background-color: #909090;
+    justify-content: space-between;
 }
 
 .action-btn{
@@ -32,9 +30,68 @@
     border: none;
 }
 
+.main-btns{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    /*border: #4D87F4 solid 2px;*/
+    align-items: center;
+    justify-content: center;
+}
+
+.main-btns .action-btn{
+    height: 50px;
+}
+
 .action-btn:hover{
     background-color: #6e6e6e;
     color: white;
+}
+
+.content-container{
+    display: flex;
+    flex-direction: column;
+    width: 90vw;
+    height: 100vh;
+    /*border: red solid 2px;*/
+}
+
+.content-header{
+    display: flex;
+    height: 20vh;
+    width: 90vw;
+    /*border: red solid 2px;*/
+    align-items: center;
+    /*padding-left: 15px;*/
+}
+
+.nav-dashboard-name{
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 15px;
+}
+
+.right-navbar{
+    display: flex;
+    width: 100%;
+    justify-content: end;
+    align-items: center;
+    padding-right: 15px;
+}
+
+.logout-btn{
+    width: 6vw;
+    background-color: #858585;
+    font-size: 14px;
+    color: #c7c7c7;
+    text-align: center;
+    padding: 5px 10px 5px 10px;
+    border: none;
+}
+
+.logout-btn:hover{
+    color: white;
+    background-color: black;
 }
 
 .main-dashboard{
