--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,10 @@
 {% block navbar %}
     <div class="navbar-spacer"></div>
     <div class="center-navbar">
+
         <a href="/data-import"><button class="navbar-buttons">Create Dashboard</button></a>
         <a href="#"><button class="navbar-buttons">Cost Estimation</button></a>
+        <a href="#"><button class="navbar-buttons">Find Clients</button></a>
     </div>
     <div class="right-navbar">
         <span>{{ user["email"] }}</span>
@@ -15,14 +17,38 @@
     </div>
 {% endblock %}
 {% block content %}
-    <form method="post">
-    <ul>
-        <h2>Projects</h2>
-        {% if projects %}
-            {% for project in projects %}
-                <input type="submit" name="project_button" value="{{ project }}"><br>
-            {% endfor %}
-        {% endif %}
-    </ul>
-    </form>
+    <div class="projects-container">
+        <h2>Recent projects</h2>
+        <form class="project-thumbnail-form" method="post">
+            {% if projects %}
+                {% for project in projects %}
+                    <div class="thumbnail-container">
+                        <button class="thumbnail-btn" type="submit" name="project_button" value="{{ project }}">
+                            <img src="{{ url_for("static", filename="site_images/project_thumbnail.png") }}" alt="submit" width="80px"/>
+                        </button>
+                        <div class="project-details-container">
+                            <h3 class="thumbnail-label">{{ project }}</h3>
+                            <h4 class="detail-rows">Dashboard last updated: <span class="project-load-date">DATE</span></h4>
+                            <div class="main-action-btns">
+                                <button class="project-options view-btn">View</button>
+                                <button class="project-options edit-btn">Edit</button>
+                                <button class="project-options remove-btn">Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        </form>
+    </div>
+    <div class="quick-data-add-container">
+        <h2>Add a record</h2>
+        <form action="">
+            <select name="" id="">
+                <option value="none">Select a dashboard.</option>
+                {% for project in projects %}
+                    <option value="{{ project }}">{{ project }}</option>
+                {% endfor %}
+            </select>
+        </form>
+    </div>
 {% endblock %}
