--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 <body>
 <div class="header">
     <div class="logo-container">
+        <span class="logo-text">Auto Contractor Analysis</span>
     </div>
     <nav class="navbar">
         {% block navbar %}
