Code cleaning and refactoring

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 <div class="header">
     <div class="logo-container">
-        <span class="logo-text">Auto Contractor Analysis</span>
+        <span class="logo-text">Auto-Analyst</span>
     </div>
     <nav class="navbar">
         {% block navbar %}
