--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 <div class="header">
     <div class="logo-container">
-        <span class="logo-text">Auto-Analyst</span>
+        <span class="logo-text">Auto-Analyst <sup>powered by Learning<sup>n</sup></sup></span>
     </div>
     <nav class="navbar">
         {% block navbar %}
