--- a/templates/import_data.html
+++ b/templates/import_data.html
@@ -18,12 +18,46 @@
     <div class="instructions-container">
 
         <div class="instructions-card make-card">
-            <h2>Some quick instructions...</h2>
-            <p>Just a couple of prerequisites to get started:</p>
+            <h3>Just a couple of prerequisites to get started...</h3>
             <ul>
                 <li>Data uploaded must contain the <b>required fields<sup>*</sup></b>as listed below.</li>
                 <li>Please be sure to <b>remove all styling,</b> additional headers, etc.</li>
             </ul>
+            <div class="required-fields-container">
+            <h4>Required fields:</h4>
+                <ul>
+                    <li class="required-field-row"><b>Date </b>(<em>field details</em>)
+                        <ul>
+                            <li><em>format instructions</em></li>
+                        </ul>
+                    </li>
+
+                    <li class="required-field-row"><b>Sales</b>(<em>field details</em>)
+                        <ul>
+                            <li><em>format instructions</em></li>
+                        </ul>
+                    </li>
+
+                    <li class="required-field-row"><b>Costs</b>(<em>field details</em>)
+                        <ul>
+                            <li><em>format instructions</em></li>
+                        </ul>
+                    </li>
+
+                    <li class="required-field-row"><b>Labor</b>(<em>field details</em>)
+                        <ul>
+                            <li><em>format instructions</em></li>
+                        </ul>
+                    </li>
+
+                    <li class="required-field-row"><b>Materials</b>(<em>field details</em>)
+                        <ul>
+                            <li><em>format instructions</em></li>
+                        </ul>
+                    </li>
+
+                </ul>
+            </div>
         </div>
 
     </div>
