--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,7 +49,14 @@ html, body{
 .logo-text{
     font-size: 26px;
     color: #7c7c7c;
-    text-shadow: #4B4B4B -1px 0 2px;
+    font-weight: bolder;
+    /*text-shadow: #4B4B4B -1px 0 2px;*/
+}
+
+.logo-container sup{
+    text-shadow: none;
+    color: #6e6e6e;
+    font-size: 14px;
 }
 
 .navbar{
