--- a/static/css/import_data.css
+++ b/static/css/import_data.css
@@ -8,10 +8,12 @@
     justify-content: end;
 }
 
-.content{
-    height: 65vh;
-}
+/*.content{*/
+/*    border: #4D87F4 solid 2px;*/
+/*    height: 65vh;*/
+/*}*/
 .instructions-container{
+    /*border: #4D87F4 solid 2px;*/
     display: flex;
     width: 55vw;
     justify-content: center;
@@ -19,10 +21,17 @@
 }
 
 .instructions-card{
-    height: fit-content;
-    line-height: 34px;
-    padding: 5px 30px 15px 15px;
+    /*border: red solid 2px;*/
+    /*height: fit-content;*/
+    /*line-height: 34px;*/
+    padding: 0px 30px 0px 15px;
 }
+
+.required-field-row{
+    line-height: 1.5;
+    margin-bottom: 10px;
+}
+
 
 
 .upload-form-container{
